<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <com.google.android.material.textfield.TextInputEditText
        android:id="@+id/date_by_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:clickable="false"
        android:focusable="false"
        android:hint="Filter par la date"
        android:layout_margin="16dp" />

    <AutoCompleteTextView
        android:id="@+id/room_by_filter"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:cursorVisible="false"
        android:hint="Filtrez par numéro de chambre"
        android:layout_margin="16dp"
        android:textSize="18sp"
        style="@style/Widget.AppCompat.Spinner.Underlined" />



</LinearLayout>